--- a/05_Deep_Learning/Sprint_19/Unidad_02/Practica_Obligatoria/18_Practica_Obligatoria_Redes_Convolucionales_II__Trasnfer_Learning_y_Fine-Tunning.ipynb
+++ b/05_Deep_Learning/Sprint_19/Unidad_02/Practica_Obligatoria/18_Practica_Obligatoria_Redes_Convolucionales_II__Trasnfer_Learning_y_Fine-Tunning.ipynb
@@ -76,14 +76,301 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "languageId": "plaintext"
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "FileNotFoundError",
+     "evalue": "[WinError 3] El sistema no puede encontrar la ruta especificada: 'data/seg_train/seg_train\\\\buildings'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[2], line 33\u001b[0m\n\u001b[0;32m     30\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m np\u001b[38;5;241m.\u001b[39marray(images), np\u001b[38;5;241m.\u001b[39marray(labels)\n\u001b[0;32m     32\u001b[0m \u001b[38;5;66;03m# Cargar imágenes y etiquetas\u001b[39;00m\n\u001b[1;32m---> 33\u001b[0m X_train, y_train \u001b[38;5;241m=\u001b[39m \u001b[43mload_images_from_directory\u001b[49m\u001b[43m(\u001b[49m\u001b[43mtrain_dir\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mimg_size\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m     34\u001b[0m X_test, y_test \u001b[38;5;241m=\u001b[39m load_images_from_directory(test_dir, img_size)\n\u001b[0;32m     36\u001b[0m \u001b[38;5;66;03m# Normalizar las imágenes\u001b[39;00m\n",
+      "Cell \u001b[1;32mIn[2], line 23\u001b[0m, in \u001b[0;36mload_images_from_directory\u001b[1;34m(directory, img_size)\u001b[0m\n\u001b[0;32m     21\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m label, \u001b[38;5;28mcls\u001b[39m \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28menumerate\u001b[39m(classes):\n\u001b[0;32m     22\u001b[0m     cls_dir \u001b[38;5;241m=\u001b[39m os\u001b[38;5;241m.\u001b[39mpath\u001b[38;5;241m.\u001b[39mjoin(directory, \u001b[38;5;28mcls\u001b[39m)\n\u001b[1;32m---> 23\u001b[0m     \u001b[38;5;28;01mfor\u001b[39;00m filename \u001b[38;5;129;01min\u001b[39;00m \u001b[43mos\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mlistdir\u001b[49m\u001b[43m(\u001b[49m\u001b[43mcls_dir\u001b[49m\u001b[43m)\u001b[49m:\n\u001b[0;32m     24\u001b[0m         \u001b[38;5;28;01mif\u001b[39;00m filename\u001b[38;5;241m.\u001b[39mendswith(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m.jpg\u001b[39m\u001b[38;5;124m\"\u001b[39m) \u001b[38;5;129;01mor\u001b[39;00m filename\u001b[38;5;241m.\u001b[39mendswith(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m.png\u001b[39m\u001b[38;5;124m\"\u001b[39m):\n\u001b[0;32m     25\u001b[0m             img_path \u001b[38;5;241m=\u001b[39m os\u001b[38;5;241m.\u001b[39mpath\u001b[38;5;241m.\u001b[39mjoin(cls_dir, filename)\n",
+      "\u001b[1;31mFileNotFoundError\u001b[0m: [WinError 3] El sistema no puede encontrar la ruta especificada: 'data/seg_train/seg_train\\\\buildings'"
+     ]
     }
-   },
+   ],
+   "source": [
+    "import os\n",
+    "import cv2\n",
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from tensorflow.keras.utils import to_categorical\n",
+    "\n",
+    "# Directorios del dataset\n",
+    "train_dir = 'data/seg_train/seg_train'\n",
+    "test_dir = 'data/seg_test/seg_test'\n",
+    "\n",
+    "# Clases del dataset\n",
+    "classes = ['buildings', 'forest', 'glacier', 'mountain', 'sea', 'street']\n",
+    "\n",
+    "# Tamaño de las imágenes\n",
+    "img_size = 128\n",
+    "\n",
+    "def load_images_from_directory(directory, img_size):\n",
+    "    images = []\n",
+    "    labels = []\n",
+    "    for label, cls in enumerate(classes):\n",
+    "        cls_dir = os.path.join(directory, cls)\n",
+    "        for filename in os.listdir(cls_dir):\n",
+    "            if filename.endswith(\".jpg\") or filename.endswith(\".png\"):\n",
+    "                img_path = os.path.join(cls_dir, filename)\n",
+    "                image = cv2.imread(img_path)\n",
+    "                image = cv2.resize(image, (img_size, img_size))\n",
+    "                images.append(image)\n",
+    "                labels.append(label)\n",
+    "    return np.array(images), np.array(labels)\n",
+    "\n",
+    "# Cargar imágenes y etiquetas\n",
+    "X_train, y_train = load_images_from_directory(train_dir, img_size)\n",
+    "X_test, y_test = load_images_from_directory(test_dir, img_size)\n",
+    "\n",
+    "# Normalizar las imágenes\n",
+    "X_train = X_train / 255.0\n",
+    "X_test = X_test / 255.0\n",
+    "\n",
+    "# One-hot encoding de las etiquetas\n",
+    "y_train = to_categorical(y_train, len(classes))\n",
+    "y_test = to_categorical(y_test, len(classes))\n",
+    "\n",
+    "# Visualización de algunas imágenes\n",
+    "def visualize_images(images, labels, num_images=10):\n",
+    "    plt.figure(figsize=(20, 10))\n",
+    "    for i in range(num_images):\n",
+    "        plt.subplot(2, num_images // 2, i + 1)\n",
+    "        plt.xticks([])\n",
+    "        plt.yticks([])\n",
+    "        plt.grid(False)\n",
+    "        plt.imshow(images[i])\n",
+    "        plt.xlabel(classes[np.argmax(labels[i])])\n",
+    "    plt.show()\n",
+    "\n",
+    "visualize_images(X_train, y_train)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Transfer learning con MobileNetV2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from tensorflow.keras.applications import MobileNetV2\n",
+    "from tensorflow.keras.models import Model\n",
+    "from tensorflow.keras.layers import Dense, GlobalAveragePooling2D, Dropout\n",
+    "from tensorflow.keras.optimizers import Adam\n",
+    "\n",
+    "# Cargar el modelo base MobileNetV2 preentrenado\n",
+    "base_model = MobileNetV2(weights='imagenet', include_top=False, input_shape=(img_size, img_size, 3))\n",
+    "\n",
+    "# Congelar las capas del modelo base\n",
+    "base_model.trainable = False\n",
+    "\n",
+    "# Añadir una nueva cabeza\n",
+    "x = base_model.output\n",
+    "x = GlobalAveragePooling2D()(x)\n",
+    "x = Dense(128, activation='relu')(x)\n",
+    "x = Dropout(0.5)(x)\n",
+    "x = Dense(len(classes), activation='softmax')(x)\n",
+    "\n",
+    "# Crear el modelo completo\n",
+    "model = Model(inputs=base_model.input, outputs=x)\n",
+    "\n",
+    "# Compilar el modelo\n",
+    "model.compile(optimizer=Adam(), loss='categorical_crossentropy', metrics=['accuracy'])\n",
+    "\n",
+    "# Entrenar el modelo\n",
+    "history = model.fit(X_train, y_train, epochs=10, batch_size=32, validation_split=0.2)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Evaluación del modelo con transfer learning"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.metrics import classification_report, confusion_matrix\n",
+    "import seaborn as sns\n",
+    "\n",
+    "# Evaluación en el conjunto de prueba\n",
+    "test_loss, test_acc = model.evaluate(X_test, y_test)\n",
+    "\n",
+    "# Predicciones\n",
+    "predictions = model.predict(X_test)\n",
+    "predicted_labels = np.argmax(predictions, axis=1)\n",
+    "true_labels = np.argmax(y_test, axis=1)\n",
+    "\n",
+    "# Reporte de clasificación\n",
+    "print(classification_report(true_labels, predicted_labels, target_names=classes))\n",
+    "\n",
+    "# Matriz de confusión\n",
+    "conf_matrix = confusion_matrix(true_labels, predicted_labels)\n",
+    "sns.heatmap(conf_matrix, annot=True, fmt='d', cmap='Blues', xticklabels=classes, yticklabels=classes)\n",
+    "plt.xlabel('Predicted')\n",
+    "plt.ylabel('True')\n",
+    "plt.show()\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Fine-Tuning del modelo"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Descongelar las últimas capas del modelo base\n",
+    "base_model.trainable = True\n",
+    "fine_tune_at = 100  # Número de capas a descongelar en el modelo base\n",
+    "\n",
+    "for layer in base_model.layers[:fine_tune_at]:\n",
+    "    layer.trainable = False\n",
+    "\n",
+    "# Compilar el modelo de nuevo\n",
+    "model.compile(optimizer=Adam(learning_rate=1e-5), loss='categorical_crossentropy', metrics=['accuracy'])\n",
+    "\n",
+    "# Entrenar el modelo con fine-tuning\n",
+    "history_fine = model.fit(X_train, y_train, epochs=10, batch_size=32, validation_split=0.2)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Evaluar modelo fine-tuning"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Evaluación en el conjunto de prueba\n",
+    "test_loss_fine, test_acc_fine = model.evaluate(X_test, y_test)\n",
+    "\n",
+    "# Predicciones\n",
+    "predictions_fine = model.predict(X_test)\n",
+    "predicted_labels_fine = np.argmax(predictions_fine, axis=1)\n",
+    "true_labels_fine = np.argmax(y_test, axis=1)\n",
+    "\n",
+    "# Reporte de clasificación\n",
+    "print(classification_report(true_labels_fine, predicted_labels_fine, target_names=classes))\n",
+    "\n",
+    "# Matriz de confusión\n",
+    "conf_matrix_fine = confusion_matrix(true_labels_fine, predicted_labels_fine)\n",
+    "sns.heatmap(conf_matrix_fine, annot=True, fmt='d', cmap='Blues', xticklabels=classes, yticklabels=classes)\n",
+    "plt.xlabel('Predicted')\n",
+    "plt.ylabel('True')\n",
+    "plt.show()\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Evaluar y comparar modelos"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "from sklearn.metrics import classification_report, confusion_matrix\n",
+    "import seaborn as sns\n",
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "# Evaluar el modelo ad-hoc (asumiendo que ya tienes el modelo ad-hoc entrenado)\n",
+    "test_loss_ad_hoc, test_acc_ad_hoc = model_ad_hoc.evaluate(X_test, y_test)\n",
+    "\n",
+    "# Predicciones del modelo ad-hoc\n",
+    "predictions_ad_hoc = model_ad_hoc.predict(X_test)\n",
+    "predicted_labels_ad_hoc = np.argmax(predictions_ad_hoc, axis=1)\n",
+    "true_labels = np.argmax(y_test, axis=1)\n",
+    "\n",
+    "# Reporte de clasificación del modelo ad-hoc\n",
+    "report_ad_hoc = classification_report(true_labels, predicted_labels_ad_hoc, target_names=classes)\n",
+    "print(\"Reporte de Clasificación - Modelo Ad-hoc:\\n\", report_ad_hoc)\n",
+    "\n",
+    "# Matriz de confusión del modelo ad-hoc\n",
+    "conf_matrix_ad_hoc = confusion_matrix(true_labels, predicted_labels_ad_hoc)\n",
+    "plt.figure(figsize=(10, 7))\n",
+    "sns.heatmap(conf_matrix_ad_hoc, annot=True, fmt='d', cmap='Blues', xticklabels=classes, yticklabels=classes)\n",
+    "plt.xlabel('Predicted')\n",
+    "plt.ylabel('True')\n",
+    "plt.title('Matriz de Confusión - Modelo Ad-hoc')\n",
+    "plt.show()\n",
+    "\n",
+    "# Evaluar el modelo de transfer learning\n",
+    "test_loss_transfer, test_acc_transfer = model_transfer.evaluate(X_test, y_test)\n",
+    "\n",
+    "# Predicciones del modelo de transfer learning\n",
+    "predictions_transfer = model_transfer.predict(X_test)\n",
+    "predicted_labels_transfer = np.argmax(predictions_transfer, axis=1)\n",
+    "\n",
+    "# Reporte de clasificación del modelo de transfer learning\n",
+    "report_transfer = classification_report(true_labels, predicted_labels_transfer, target_names=classes)\n",
+    "print(\"Reporte de Clasificación - Transfer Learning:\\n\", report_transfer)\n",
+    "\n",
+    "# Matriz de confusión del modelo de transfer learning\n",
+    "conf_matrix_transfer = confusion_matrix(true_labels, predicted_labels_transfer)\n",
+    "plt.figure(figsize=(10, 7))\n",
+    "sns.heatmap(conf_matrix_transfer, annot=True, fmt='d', cmap='Blues', xticklabels=classes, yticklabels=classes)\n",
+    "plt.xlabel('Predicted')\n",
+    "plt.ylabel('True')\n",
+    "plt.title('Matriz de Confusión - Transfer Learning')\n",
+    "plt.show()\n",
+    "\n",
+    "# Evaluar el modelo de fine-tuning\n",
+    "test_loss_fine, test_acc_fine = model_fine_tuning.evaluate(X_test, y_test)\n",
+    "\n",
+    "# Predicciones del modelo de fine-tuning\n",
+    "predictions_fine = model_fine_tuning.predict(X_test)\n",
+    "predicted_labels_fine = np.argmax(predictions_fine, axis=1)\n",
+    "\n",
+    "# Reporte de clasificación del modelo de fine-tuning\n",
+    "report_fine = classification_report(true_labels, predicted_labels_fine, target_names=classes)\n",
+    "print(\"Reporte de Clasificación - Fine-Tuning:\\n\", report_fine)\n",
+    "\n",
+    "# Matriz de confusión del modelo de fine-tuning\n",
+    "conf_matrix_fine = confusion_matrix(true_labels, predicted_labels_fine)\n",
+    "plt.figure(figsize=(10, 7))\n",
+    "sns.heatmap(conf_matrix_fine, annot=True, fmt='d', cmap='Blues', xticklabels=classes, yticklabels=classes)\n",
+    "plt.xlabel('Predicted')\n",
+    "plt.ylabel('True')\n",
+    "plt.title('Matriz de Confusión - Fine-Tuning')\n",
+    "plt.show()\n",
+    "\n",
+    "# Comparación de Resultados\n",
+    "print(\"\\nComparación de Resultados:\\n\")\n",
+    "print(f\"Modelo Ad-hoc - Precisión en Test: {test_acc_ad_hoc:.4f}\")\n",
+    "print(f\"Modelo Transfer Learning - Precisión en Test: {test_acc_transfer:.4f}\")\n",
+    "print(f\"Modelo Fine-Tuning - Precisión en Test: {test_acc_fine:.4f}\")"
+   ]
   }
  ],
  "metadata": {
@@ -106,7 +393,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.8"
+   "version": "3.10.11"
   },
   "vscode": {
    "interpreter": {
