modif proyecto-ML

--- a/Proyecto_ML/Guia_Proyecto_ML.ipynb
+++ b/Proyecto_ML/Guia_Proyecto_ML.ipynb
@@ -58,13 +58,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "1. La dirección de **un repositorio Github público nuevo y dedicado exclusivamente al proyecto** de Machine Learning. En este repositorio debe haber un fichero \"Readme.md\" en el que se explique el problema que se quiere resolver, se indique el dataset empleado (es decir se describa brevemente, y se indique si es público o privado y en el primer caso se de una forma de acceder a este), se describa brevemente la solución adoptada y se comente la estructura de directorios del repositorio. ***Puntuación (5/100)***, Extra: Hacerlo en inglés y en español (5/100)  \n",
+    "1. La dirección de **un repositorio Github público nuevo y dedicado exclusivamente al proyecto** de Machine Learning. En este repositorio debe haber un fichero \"Readme.md\" en el que se explique el problema que se quiere resolver, se indique el dataset empleado (es decir se describa brevemente, y se indique si es público o privado y en el primer caso se de una forma de acceder a este), se describa brevemente la solución adoptada y se comente la estructura de directorios del repositorio. ***Puntuación (5/100)***  \n",
     "\n",
     "2. **Una muestra del dataset** (no más de 5MB de tamaño) siempre y cuando sea público a incluir en un directorio \"data_sample\". \n",
     "\n",
-    "3. **Un notebook claro y conciso con el paso a paso del proceso**. Debe ser un notebook que al ejectutar todo termine por generar el modelo y lo evalúe (como si fuera una práctica obligatoria de clase). Es necesario destacar cada paso empleando headers y negritas, (Por ejemplo **Paso 1: Entendiendo el problema**, **Paso n: Evaluación contra test**, etc). No es tu notebook de trabajo, es el notebook que lo resume, sin alternativas ni probaturas, y que debe fucionar completo. Debe ir en una carpeta \"results_notebook\" y debe incluirse con él todas las librerías no estándar que se hayan utilizado. IMPORTANTE: Este notebook debe tener como paso final la grabación del modelo en formato \"pickle\", \"joblib\" o \"h5\" (tensorflow) que creáis conveniente. Se valorará tanto el código, como el orden y la claridad. ***Puntuación (55/100)*** Extra: (15/100) realizar el notebook en inglés.\n",
+    "3. **Un notebook claro y conciso con el paso a paso del proceso**. Debe ser un notebook que al ejectutar todo termine por generar el modelo y lo evalúe (como si fuera una práctica obligatoria de clase). Es necesario destacar cada paso empleando headers y negritas, (Por ejemplo **Paso 1: Entendiendo el problema**, **Paso n: Evaluación contra test**, etc). No es tu notebook de trabajo, es el notebook que lo resume, sin alternativas ni probaturas, y que debe fucionar completo. Debe ir en una carpeta \"results_notebook\" y debe incluirse con él todas las librerías no estándar que se hayan utilizado. IMPORTANTE: Este notebook debe tener como paso final la grabación del modelo en formato \"pickle\", \"joblib\" o \"h5\" (tensorflow) que creáis conveniente. Se valorará tanto el código, como el orden y la claridad. ***Puntuación (55/100)***\n",
     "\n",
-    "4. **El documento o soporte que se emplee como apoyo a la exposición oral de resultados** (ver apartado siguiente). Puede ser en el formato que se desee mietras sea reproducible sin necesidad de software comercial. ***Puntuación (5/100)***. Extra: Entregar una versión en inglés (10/100)\n"
+    "4. **El documento o soporte que se emplee como apoyo a la exposición oral de resultados** (ver apartado siguiente). Puede ser en el formato que se desee mietras sea reproducible sin necesidad de software comercial. ***Puntuación (5/100)***. \n",
+    "\n",
+    "\n",
+    "Extra: Entregar una versión en inglés tendrá un plus de 5 puntos.\n"
    ]
   },
   {
@@ -81,7 +84,9 @@
     "A diferencia del proyecto del EDA en el que la presentación es casi tan importante o más que el desarrollo del análisis, en este caso lo realmente importante es llegar al mejor modelo posible de forma razonada. Pero no por ello, exponer los resultados es algo a descuidar.  \n",
     "\n",
     "Se pide:\n",
-    "- Realizar **una exposición oral, con los medios que se consideren necesarios,** del problema, proceso, resultados y análisis de los mismos. **El máximo de tiempo sin preguntas es de 20 minutos** a partir de ahí el exceso de tiempo consumido contará negativamente. La exposición se hará en castellano.  ***Puntuacion (35/100)***"
+    "- Realizar **una exposición oral, con los medios que se consideren necesarios,** del problema, proceso, resultados y análisis de los mismos. **El máximo de tiempo sin preguntas es de 20 minutos** a partir de ahí el exceso de tiempo consumido contará negativamente. La exposición se hará en castellano.  ***Puntuacion (35/100)***\n",
+    "\n",
+    "Extra: Exponer el proyecto en inglés tendrá un plus de 5 puntos"
    ]
   },
   {
